--- a/publications.html
+++ b/publications.html
@@ -72,6 +72,29 @@
 
 	<div id="fh5co-about">
 
+		<div class="row animate-box">
+			<div class="col-md-8 col-md-offset-2 text-center heading-section">
+			<h2>2026</h2>
+			</div>
+		</div>	
+
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+					<p>Cristian Valero Abundio, Emilio Sansano Sansano, Raul Montoliu and Marina Martínez García
+					<b>Computing a Characteristic Orientation for Rotation-Independent Image Analysis </b>.
+					21st International Conference on Computer Vision Theory and Applications (VISAPP'26). ACEPTED.
+				</div>
+			</div>
+
+
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+					<p>Ali Bakhiet Elimam, Raul Montoliu. 
+					<b> MACO: A Strategic Board Game Environment for Advanced AI Research</b>.17th International Conference on Agents and Artificial Intelligence (ICAART'26). ACEPTED.
+				</div>
+			</div>
+
+
 
 		<div class="row animate-box">
 			<div class="col-md-8 col-md-offset-2 text-center heading-section">
@@ -81,11 +104,38 @@
 
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
-					<p>Nicola Saccomanno, Andrea Brunello, Angelo Montanari, Raul Montoliu, Emilio Sansano-Sansano, Adriano Moreira, Joaquín Torres-Sospedra. 
-					<b> Empirical Insights into the Limits and Challenges of Temporal Generalization in CSI-Based Wi-Fi Sensing</b>.
-					Internet of Things. 2025. IN PRESS.
+					<p>Abraham Batalla-Gavalda, Jose Vicente Beltran-Garrido, Raúl Montoliu-Colás, Álvaro Reina-Gómez, Francisco Corbi, Gabriel Daza-Sobrino. 
+					<b> Mayor validez ecológica del Game-Based Performance Test en comparación con el Yo-Yo IR1 en jugadoras de balonmano amateur</b>.
+					Journal of Sport and Health Research, Vol. 17 (2). 2025. <a href="https://doi.org/10.58727/jshr.118640">https://doi.org/10.58727/jshr.118640</a>. 
 				</div>
 			</div>
+
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+					<p>Miguel Matey-Sanz, José M. Claver, Esther Dura, Santiago Felici-Castell, Raul Montoliu, Antoni Pérez-Navarro, Juan J. Perez-Solano, Antonio Soriano, Sergi Trilles, and Joaquín Torres-Sospedra. 
+					<b> Fingerprinting with Fine Time Measurements: from RSS to RTT</b>.
+					17th International Congress on Ultra Modern Telecommunications and Control Systems and Workshops (ICUMT'25). <a href="https://dx.doi.org/https://doi.org/10.1109/ICUMT67815.2025.11268646">https://dx.doi.org/https://doi.org/10.1109/ICUMT67815.2025.11268646s</a>. 
+				</div>
+			</div>
+
+
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+					<p>Alex Martínez-Martínez, Águeda Gómez-Cambronero, Raul Montoliu, Inmaculada Remolar. 
+					<b> Towards the Adoption of Recommender Systems in Online Education: A Framework and Implementation</b>.
+					Big Data and Cognitive Computing 9 (10), 2025.<a href="https://doi.org/10.3390/bdcc9100259">https://doi.org/10.3390/bdcc9100259</a>.
+				</div>
+			</div>
+
+
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+					<p>Nicola Saccomanno, Andrea Brunello, Angelo Montanari, Raul Montoliu, Emilio Sansano-Sansano, Adriano Moreira, Joaquín Torres-Sospedra. 
+					<b> Empirical Insights into the Limits and Challenges of Temporal Generalization in CSI-Based Wi-Fi Sensing</b>.
+					Internet of Things. 2025. <a href="https://doi.org/10.1016/j.iot.2025.101634">https://doi.org/10.1016/j.iot.2025.101634</a>.
+				</div>
+			</div>
+
 
 		<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
@@ -498,7 +548,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
     				<p>
-            		<a href="all_publications.html">Click here to see all my publications</a>.
+            		<a href="https://portalcientific.uji.es/investigadores/1327908/publicaciones">Click here to see all my publications</a>.
             		</p>
             		
 				</div>
